Additional Questions saves to end with field mapping

--- a/force-app/main/default/classes/SummitEventsConfirmationController.cls
+++ b/force-app/main/default/classes/SummitEventsConfirmationController.cls
@@ -11,20 +11,19 @@ public with sharing class SummitEventsConfirmationController {
     public String templateSelected { get; set; }
     public String formattedNavDate { get; set; }
     public Boolean eventIsClosed { get; set; }
+    public Boolean eventIsInError { get; set; }
     public Boolean adminOpen { get; set; }
+    public Summit_Events_Registration__c eventRegistration { get; set; }
 
-    public class guestJSONMap {
-        String First_name { get; set; }
-        String Last_name { get; set; }
-        String Email { get; set; }
-        String Relationship { get; set; }
-        String Address { get; set; }
-        String City { get; set; }
-        String State { get; set; }
-        String Zip { get; set; }
-        String Country { get; set; }
-        String Preferred_first_name { get; set; }
-        String Name_tag { get; set; }
+    private class questionData {
+        String guestId { get; set; }
+        List<Questions> questions { get; set; }
+    }
+
+    private class Questions {
+        String id { get; set; }
+        String value { get; set; }
+        String question { get; set; }
     }
 
     public SummitEventsConfirmationController() {
@@ -42,123 +41,169 @@ public with sharing class SummitEventsConfirmationController {
                     WITH SECURITY_ENFORCED
             ];
 
-            templateSelected = seaShared.getTemplate(eventPage.Template__c);
+            if (eventPage != null) {
 
-            eventInstance = [
-                    SELECT Instance_Title__c, Event__r.Event_Name__c, Instance_Time_Zone__c, Instance_Start_Time__c, Instance_End_Time__c,
-                            Instance_Start_Date__c, Instance_End_Date__c, Current_Available_Capacity__c, Active_Status__c
-                    FROM Summit_Events_Instance__c
-                    WHERE Id = :eventInformation.instanceId
-                    LIMIT 1
-            ];
+                templateSelected = seaShared.getTemplate(eventPage.Template__c);
 
-            if (String.isNotBlank(ApexPages.currentPage().getParameters().get('adminopen'))) {
-                adminOpen = Boolean.valueOf(ApexPages.currentPage().getParameters().get('adminopen'));
-                eventIsClosed = adminOpen;
-            } else {
-                eventIsClosed = seaShared.isEventClosed(eventPage, eventInstance);
+                if (String.isNotBlank(eventInformation.instanceId)) {
+                    eventInstance = [
+                            SELECT Instance_Title__c, Event__r.Event_Name__c, Instance_Time_Zone__c, Instance_Start_Time__c, Instance_End_Time__c,
+                                    Instance_Start_Date__c, Instance_End_Date__c, Current_Available_Capacity__c, Active_Status__c
+                            FROM Summit_Events_Instance__c
+                            WHERE Id = :eventInformation.instanceId
+                            LIMIT 1
+                    ];
+
+                    if (String.isNotBlank(ApexPages.currentPage().getParameters().get('adminopen'))) {
+                        adminOpen = Boolean.valueOf(ApexPages.currentPage().getParameters().get('adminopen'));
+                        eventIsClosed = adminOpen;
+                    } else {
+                        eventIsClosed = seaShared.isEventClosed(eventPage, eventInstance);
+                    }
+                    formattedNavDate = seaShared.navBreadcrumbBuilder(eventInstance);
+                }
+
+                if (String.isNotBlank(eventInformation.registrationId)) {
+                    eventRegistration = [
+                            SELECT Id, Status__c
+                            FROM Summit_Events_Registration__c
+                            WHERE Id = :eventInformation.registrationId
+                    ];
+
+                }
+
             }
-
-            formattedNavDate = seaShared.navBreadcrumbBuilder(eventInstance);
         }
-
     }
 
     public void checkEventDetails() {
         eventInformation = seaShared.getSummitEventsInfo();
+        Boolean eventRegistrationSuccess = true;
+
+        //Make sure the event has not expired
+        eventIsClosed = false;
+        if (String.isNotBlank(ApexPages.currentPage().getParameters().get('adminopen'))) {
+            adminOpen = Boolean.valueOf(ApexPages.currentPage().getParameters().get('adminopen'));
+            eventIsClosed = adminOpen;
+        } else {
+            eventIsClosed = seaShared.isEventClosed(eventPage, eventInstance);
+        }
 
         if (!eventIsClosed) {
             String eventTitle = '';
             if (!String.isBlank(eventInformation.registrationId)) {
-                Summit_Events_Registration__c eventsRegistration = [
+
+                Summit_Events_Registration__c eventRegistration = [
                         SELECT Id, Status__c, Event_Name__c, Event_Instance_Title__c, Guest_JSON__c
                         FROM Summit_Events_Registration__c
                         WHERE Id = :eventInformation.registrationId
                         WITH SECURITY_ENFORCED
                 ];
 
-                if (!String.isBlank(eventsRegistration.Event_Instance_Title__c)) {
-                    eventTitle = eventsRegistration.Event_Name__c + ' - ' + eventsRegistration.Event_Instance_Title__c ;
-                } else {
-                    eventTitle = eventsRegistration.Event_Name__c;
-                }
-                eventsRegistration.Status__c = 'Registered';
+                //Make sure there is returned registration information
+                if (eventRegistrationSuccess != null) {
 
+                    registrationCRUD regCRUD = new registrationCRUD();
 
-                List<Summit_Events_Registration__c> guestRegistrations = new List<Summit_Events_Registration__c>();
-                if (String.isNotBlank(eventsRegistration.Guest_JSON__c)) {
-                    List<guestJSONMap> guests = (List<guestJSONMap>) JSON.deserialize(eventsRegistration.Guest_JSON__c, List<guestJSONMap>.class);
-                    for (guestJSONMap guest : guests) {
-                        Summit_Events_Registration__c guestRegistration = new Summit_Events_Registration__c();
-                        guestRegistration.Event__c = eventInformation.eventId;
-                        guestRegistration.Event_Instance__c = eventInformation.instanceId;
-                        guestRegistration.Status__c = 'Registered';
-                        guestRegistration.Guest_Host_Status__c = 'Hosted registrant';
-                        guestRegistration.Guest_Host__c = eventInformation.registrationId;
-                        if (String.isNotBlank(guest.First_name)) {
-                            guestRegistration.Registrant_First_Name__c = String.escapeSingleQuotes(guest.First_name.unescapeHtml4());
-                        }
-                        if (String.isNotBlank(guest.Last_name)) {
-                            guestRegistration.Registrant_Last_Name__c = String.escapeSingleQuotes(guest.Last_name.unescapeHtml4());
-                        }
-                        if (String.isNotBlank(guest.Email)) {
-                            String emailIn = String.escapeSingleQuotes(guest.Email.unescapeHtml4());
-                            if (validateEmail(emailIn)) {
-                                guestRegistration.Registrant_Email__c = emailIn;
+                    if (!String.isBlank(eventRegistration.Event_Instance_Title__c)) {
+                        eventTitle = eventRegistration.Event_Name__c + ' - ' + eventRegistration.Event_Instance_Title__c ;
+                    } else {
+                        eventTitle = eventRegistration.Event_Name__c;
+                    }
+
+                    //Hosted Guests turn into registrations here if Guest_JSON__c is present in data
+                    if (String.isNotBlank(eventRegistration.Guest_JSON__c)) {
+
+                        List<Summit_Events_Registration__c> guestRegistrations = new List<Summit_Events_Registration__c>();
+
+                        //Get all questions defined for the event that are for guests
+                        Map<Id, Summit_Events_Question__c> availableQuestions = new Map<Id, Summit_Events_Question__c>([
+                                SELECT Id, Map_to_Field__c, Question_Field_Type__c, Display_Order__c
+                                FROM Summit_Events_Question__c
+                                WHERE Event__c = :eventInformation.eventId
+                                AND Registrant_Type__c = 'Guest'
+                                WITH SECURITY_ENFORCED
+                                ORDER BY Display_Order__c NULLS LAST
+                        ]);
+
+                        List<questionData> guestAnswers = (List<questionData>) JSON.deserialize(eventRegistration.Guest_JSON__c, List<questionData>.class);
+                        for (Integer xx = 0; xx < guestAnswers.size(); xx++) {
+                            Summit_Events_Registration__c guestRegistration = new Summit_Events_Registration__c();
+                            for (Questions q : guestAnswers[xx].questions) {
+                                Id questionId = null;
+                                try {
+                                    questionId = seaShared.decryptString(q.id, true);
+                                } catch (Exception e) {
+                                    System.debug(e.getMessage());
+                                }
+                                if (questionId != null) {
+                                    Summit_Events_Question__c questionParameters = availableQuestions.get(questionId);
+                                    String mapToField = questionParameters.Map_to_Field__c;
+                                    if (String.isNotBlank(mapToField)) {
+                                        mapToField = String.escapeSingleQuotes(mapToField).escapeHtml4();
+                                        Boolean fieldExists = true;
+                                        try {
+                                            Object nextField = Schema.sObjectType.Summit_Events_Registration__c.fields.getMap().get(mapToField).getDescribe();
+                                        } catch (Exception e) {
+                                            fieldExists = false;
+                                        }
+                                        if (fieldExists && Schema.sObjectType.Summit_Events_Registration__c.isAccessible() &&
+                                                Schema.sObjectType.Summit_Events_Registration__c.fields.getMap().get(mapToField).getDescribe().isAccessible() &&
+                                                Schema.sObjectType.Summit_Events_Registration__c.fields.getMap().get(mapToField).getDescribe().isCreateable()) {
+                                            guestRegistration.put(mapToField, q.value);
+                                        } else {
+                                            eventRegistrationSuccess = false;
+                                            ApexPages.addMessage(new ApexPages.Message(ApexPages.Severity.ERROR, 'Hosted Record: Insufficient Access to ' + mapToField));
+                                        }
+                                    }
+                                }
+                            }
+                            if (guestRegistration != null) {
+                                guestRegistration.Event_Instance__c = eventInformation.InstanceId;
+                                guestRegistration.Event__c = eventInformation.eventId;
+                                guestRegistration.Guest_Host_Status__c = 'Hosted registrant';
+                                guestRegistration.Status__c = 'Registered';
+                                //Get original registration id for host
+                                guestRegistration.Guest_Host__c = eventInformation.registrationId;
+
+                                guestRegistrations.add(guestRegistration);
                             }
                         }
-                        if (String.isNotBlank(guest.Relationship)) {
-                            guestRegistration.Registrant_Other_Relationship__c = String.escapeSingleQuotes(guest.Relationship.unescapeHtml4());
-                        }
-                        if (String.isNotBlank(guest.Address)) {
-                            guestRegistration.Registrant_Street_1__c = String.escapeSingleQuotes(guest.Address.unescapeHtml4());
+
+                        if (guestRegistrations.size() > 0) {
+                            regCRUD.addGuestRegistration(guestRegistrations);
+                            //TODO: Ask original registrant if they are attending the event and enter value below.
+                            eventRegistration.Guest_Host_Status__c = 'Host attending';
+                        } else {
+                            eventRegistrationSuccess = false;
                         }
 
-                        if (String.isNotBlank(guest.City)) {
-                            guestRegistration.Registrant_City__c = String.escapeSingleQuotes(guest.City.unescapeHtml4());
+                    }
+
+                    if (eventRegistrationSuccess) {
+                        //Build encrypted string for registration. Used for cancel link or other services outside of Summit Events App
+                        String encryptedString = seaShared.createEncryptedCookie(eventInformation.audience, eventInformation.instanceId, eventInformation.eventId, eventInformation.registrationId);
+
+                        if (encryptedString.length() > 255) {
+                            eventRegistration.Encrypted_Registration_Id_1__c = encryptedString.substring(0, 255);
+                            eventRegistration.Encrypted_Registration_Id_2__c = encryptedString.substring(255, encryptedString.length());
+                        } else {
+                            eventRegistration.Encrypted_Registration_Id_1__c = encryptedString;
                         }
 
-                        if (String.isNotBlank(guest.Zip)) {
-                            guestRegistration.Registrant_Zip__c = String.escapeSingleQuotes(guest.Zip.unescapeHtml4());
-                        }
+                        eventRegistration.Status__c = 'Registered';
+                        eventRegistration = regCRUD.updateRegistration(eventRegistration);
 
-                        if (String.isNotBlank(guest.Name_tag)) {
-                            guestRegistration.Registrant_Name_Tag__c = String.escapeSingleQuotes(guest.Name_tag.unescapeHtml4());
-                        }
+                        SummitEventsShared SEAShared = new SummitEventsShared();
 
-                        if(String.isNotBlank(guest.Preferred_first_name)) {
-                            guestRegistration.Registrant_Preferred_First_Name__c = String.escapeSingleQuotes(guest.Preferred_first_name.unescapeHtml4());
-                        }
-
-                        if(String.isNotBlank(guest.State)) {
-                            guestRegistration.Registrant_State__c = String.escapeSingleQuotes(guest.State.unescapeHtml4());
-                        }
-
-                        guestRegistrations.add(guestRegistration);
+                        //Remove the registration ID from the cookie so back button will redirect to the correct page.
+                        SEAShared.createEncryptedCookie(eventInformation.audience, eventInformation.instanceId, eventInformation.eventId, '');
                     }
                 }
-
-                String encryptedString = seaShared.createEncryptedCookie(eventInformation.audience, eventInformation.instanceId, eventInformation.eventId, eventInformation.registrationId);
-
-                if (encryptedString.length() > 255) {
-                    eventsRegistration.Encrypted_Registration_Id_1__c = encryptedString.substring(0, 255);
-                    eventsRegistration.Encrypted_Registration_Id_2__c = encryptedString.substring(255, encryptedString.length());
-                } else {
-                    eventsRegistration.Encrypted_Registration_Id_1__c = encryptedString;
-                }
-
-                registrationCRUD regCRUD = new registrationCRUD();
-                eventsRegistration = regCRUD.updateRegistration(eventsRegistration);
-
-                if (guestRegistrations.size() > 0) {
-                    regCRUD.addGuestRegistration(guestRegistrations);
-                }
-
-                SummitEventsShared SEAShared = new SummitEventsShared();
-
-                //Remove the registration ID from the cookie so back button will redirect to the correct page.
-                SEAShared.createEncryptedCookie(eventInformation.audience, eventInformation.instanceId, eventInformation.eventId, '');
             }
+
+        } else {
+            eventRegistrationSuccess = false;
         }
     }
 
