--- a/force-app/main/default/classes/SummitEventsRegisterGuestsController.cls
+++ b/force-app/main/default/classes/SummitEventsRegisterGuestsController.cls
@@ -56,7 +56,7 @@ public with sharing class SummitEventsRegisterGuestsController {
             eventPage = [
                     SELECT Event_Name__c, Event_Submit_Title__c, Event_Submit_Description__c, Event_Footer__c, Template__c, Event_Home_Link_Title__c, Event_Home_Link_URL__c,
                             Tracking_Submit_Registration__c, Event_Full_Text__c, Close_Event_Days_Before__c, Keep_Registration_Open_During_Event__c,
-                            Guest_Registration_Title__c, Guest_Max_Amount__c,Guest_Registrant_Information__c, Guest_Registration_Description__c, Guest_Table_Size__c, Guest_Tables_Available__c,
+                            Guest_Registration_Title__c, Guest_Max_Amount__c, Guest_Registration_Description__c, Guest_Table_Size__c, Guest_Tables_Available__c,
                             Display_Guest_Registration__c
                     FROM Summit_Events__c
                     WHERE Id = :eventInformation.eventId
